--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="card">
-      <header class="card-header">
+    <main>
+      <section class="card-header">
         <img src="./images/image-qr-code.png" alt="Frontend Mentor QR Code" />
-      </header>
-      <main class="content">
+      </section>
+      <section class="content">
         <h1>Improve your front-end skills by building projects</h1>
         <p>
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
-      </main>
+      </section>
     </main>
 
     <footer class="attribution">
