updated markup to avoid a section without heading

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   </head>
   <body>
     <main>
-      <section class="card-header">
+      <div class="card-header">
         <img src="./images/image-qr-code.png" alt="Frontend Mentor QR Code" />
-      </section>
+      </div>
       <section class="content">
         <h1>Improve your front-end skills by building projects</h1>
         <p>
